--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">JavaTests</string>
+    <string name="logo">logo</string>
+    <string name="email">Email</string>
+    <string name="password">Пароль</string>
+    <string name="forget_password">Забыли пароль?</string>
+    <string name="enter">Войти</string>
+    <string name="still_no_account">Еще нет аккаунта? Создать</string>
 </resources>
