--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,8 @@
     <string name="enter">Войти</string>
     <string name="still_no_account">Еще нет аккаунта? Создать</string>
     <string name="loading">Загрузка…</string>
+    <string name="name">Ваше имя</string>
+    <string name="registration">Регистрация</string>
 
     <string name="email_not_validated">Email введен неверно.</string>
     <string name="password_not_entered">Введите пароль.</string>
