--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -60,4 +60,5 @@
     <string name="error_api_not_available">Сейчас сервис не доступен.</string>
 
     <string name="article_category_title">Статьи</string>
+    <string name="double_back_to_exit">Нажмите еще раз для выхода</string>
 </resources>
